example/secondfile/objects/Related_End_Customer__c.object
<CustomObject>
    <description>For ATT demo</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related End Customers</relationshipLabel>
        <relationshipName>Related_End_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related End Customers</relationshipLabel>
        <relationshipName>Related_End_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra__c</fullName>
        <label>Extra</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_as_Customer__c</fullName>
        <label>Years as Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related End Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related End Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>